--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1,8 +1,38 @@
-<div class="modal fade imagen-ampliada" id="imagenModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade imagen-ampliada" id="imagenModalguia" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-g"> 
     <div class="modal-content">
       <div class="modal-body">
         <img src="img/Recoleccion/guia.PNG" class="img-fluid" alt="Imagen Ampliada">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade imagen-ampliada" id="imagenModalguia2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg"> 
+    <div class="modal-content">
+      <div class="modal-body">
+        <img src="img/Recoleccion/guia2.png" class="img-fluid" alt="Imagen Ampliada">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade imagen-ampliada" id="imagenModalguia3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-g"> 
+    <div class="modal-content">
+      <div class="modal-body">
+        <img src="img/Recoleccion/guia3.PNG" class="img-fluid" alt="Imagen Ampliada">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade imagen-ampliada" id="imagenModalguia4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg"> 
+    <div class="modal-content">
+      <div class="modal-body">
+        <img src="img/Recoleccion/guia4.PNG" class="img-fluid" alt="Imagen Ampliada">
       </div>
     </div>
   </div>
@@ -358,10 +388,24 @@
 
             <!-- Imagen que se agranda al hacer clic -->
             <div class="container mt-5">
-              <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
-                <div class="col">
-                  <img src="img/Recoleccion/guia.PNG" class="img-fluid" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModal">
+              <div class="row row-cols-1 row-cols-md-4 g-4 ">
+                <div class="col text-center">
+                  <b>DHL</b>
+                  <a href=""><img src="img/Recoleccion/guia.PNG" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia"></a>
                 </div>
+                <div class="col text-center">
+                  <b>FedEx</b>
+                  <a href=""><img src="img/Recoleccion/guia2.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia2"></a>
+                </div>
+                <div class="col text-center">
+                  <b>99 minutos</b> <br/>
+                  <a href=""><img src="img/Recoleccion/guia3.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia3"></a>
+                </div>
+                <div class="col text-center">
+                  <b>99 minutos</b>
+                  <a href=""><img src="img/Recoleccion/guia4.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia4"></div></a>
+                </div>
+                
               </div>
             </div>
 
