--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -386,25 +386,35 @@
             Ejemplo de Guías:
             </P>
 
+            <div class="border-3 card card-aviso mb-3 justify-content-center ">
+              <div class="card-body">
+                <p class="card-text">
+                  Es importante verificar que las guías tengan buena calidad ya que la información dentro del documento se escanea por parte del departamento y la paquetería.
+                </p>
+              </div>
+            </div>
+
             <!-- Imagen que se agranda al hacer clic -->
             <div class="container mt-5">
               <div class="row row-cols-1 row-cols-md-4 g-4 ">
                 <div class="col text-center">
                   <b>DHL</b>
-                  <a href=""><img src="img/Recoleccion/guia.PNG" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia"></a>
+                  <img src="img/Recoleccion/guia.PNG" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia">
                 </div>
                 <div class="col text-center">
                   <b>FedEx</b>
-                  <a href=""><img src="img/Recoleccion/guia2.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia2"></a>
+                  <img src="img/Recoleccion/guia2.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia2">
                 </div>
                 <div class="col text-center">
                   <b>99 minutos</b> <br/>
-                  <a href=""><img src="img/Recoleccion/guia3.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia3"></a>
+                  <img src="img/Recoleccion/guia3.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia3">
                 </div>
                 <div class="col text-center">
                   <b>99 minutos</b>
-                  <a href=""><img src="img/Recoleccion/guia4.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia4"></div></a>
+                  <img src="img/Recoleccion/guia4.png" class="img-fluid botonejemdoc" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia4"></div>
                 </div>
+
+                
                 
             </div>
           </div>
