--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -22,7 +22,7 @@
   <div class="modal-dialog modal-dialog-centered modal-g"> 
     <div class="modal-content">
       <div class="modal-body">
-        <img src="img/Recoleccion/guia3.PNG" class="img-fluid" alt="Imagen Ampliada">
+        <img src="img/Recoleccion/guia3.png" class="img-fluid" alt="Imagen Ampliada">
       </div>
     </div>
   </div>
@@ -32,7 +32,7 @@
   <div class="modal-dialog modal-dialog-centered modal-lg"> 
     <div class="modal-content">
       <div class="modal-body">
-        <img src="img/Recoleccion/guia4.PNG" class="img-fluid" alt="Imagen Ampliada">
+        <img src="img/Recoleccion/guia4.png" class="img-fluid" alt="Imagen Ampliada">
       </div>
     </div>
   </div>
@@ -394,7 +394,7 @@
               </div>
             </div>
 
-            <!-- Imagen que se agranda al hacer clic -->
+            
             <div class="container mt-5">
               <div class="row row-cols-1 row-cols-md-4 g-4 ">
                 <div class="col text-center">
