--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -670,10 +670,10 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Control escolar</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Raúl Osvaldo Mares Castro</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Jessica Lara Ordoñez</h6>
                     <p class="card-text">
-                      Cargo: </br>Supervisor de Configuración Banner</br>
-                      Correo: </br>rmaresca@utel.edu.mx</br>
+                      Cargo: </br>Supervisora de Configuración Banner</br>
+                      Correo: </br>jlaraor@utel.edu.mx</br>
                       Funciones:</br>
                       ● Estructura los insumos para la correcta operación del sistema al servicio de diferentes áreas (gestión de matrícula, academia, etc.)</br>
                       ● Atención a solicitudes de bajas de estudiante </br>
