--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -349,13 +349,13 @@
 
                       Para realizar el trámite de constancia se necesita:<br/>
 
-                      -Tener tu documentación física (acta de nacimiento y certificado de bachillerato)<br/>
+                      -Tener tu documentación digital<br/>
 
                       -Tener tus pagos al corriente<br/>
 
                       <br/>
 
-                      El alumno tiene que realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500 o con la referencia de sus pagos de colegiatura. Si realiza el pago por otro medio deberá solicitar el trámite a tutoría y enviar su comprobante de pago.<br/><br/>
+                      El alumno tiene que realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500. Si realiza el pago por otro medio deberá solicitar el trámite a tutoría y enviar su comprobante de pago.<br/><br/>
 
                       Nota: Si realiza su pago en línea la solicitud será creada en automático, el trámite tiene una duración de 4 a 10 días hábiles aproximadamente.<br/><br/>
                       En ambos casos se recomienda dar aviso al área de tutoría para el seguimiento.<br/>
