--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -340,12 +340,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Requiere enviarlo a las oficinas UTEL.
+                    ¿Requieres enviarlos a la oficina Utel?
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body">
-                    Si prefieres el envío por paquetería, te recomendamos contratar a una guía de tu preferencia y por favor asegúrate de dirigir el paquete a Josue Moises Pacheco como destinatario. La dirección completa es: Calle Calz. de la Naranja 159, Alce Blanco, entre la calle esfuerzo nacional y calle 8, 53370 Naucalpan de Juárez, Méx. (Oficinas, piso 1). No olvides incluir tus datos domiciliarios en el remitente.
+                    Cuando el ingreso es por equivalencia de materias, puedes solicitar una guía prepagada de Redpack para el envío de documentos. Sin embargo, si el ingreso es por revalidación de estudios y no te encuentras en México, el costo del envío corre por tu cuenta.
                   </div>
                 </div>
               </div>
@@ -353,11 +353,11 @@
 
           </div>
           
-          
+          <br/>
           
           <div>
             <div class="card border-0 py-3 px-3" >
-
+              <h5 class="text-center" ><b>Tabla de correspondencia de estudios</b></h5>
               <div class="framedoc m-5">
               <iframe src="docs/doc/tablacorrespondencia.pdf" width="100%" height="680px"></iframe>
 
@@ -705,11 +705,12 @@
 
           <div class="card border-0 py-3" > 
 
-            <h4><b>Correspondecia escolar</b></h4>
+            <h4>Recolección de documentos<b></b></h4>
 
             <p style="text-align: justify;">
               Equipo encargado de recolectar y validar documentos digitales y físicos de todo estudiante que no ha completado su expediente escolar.
-              Proceso general: El asesor contacta al alumno para solicitar documentos digitales y físicos para completar el expediente escolar.
+              <br/>
+              <b>Proceso general:</b> El asesor contacta al alumno para solicitar documentos digitales y físicos para completar el expediente escolar.
             </P>
 
             <h5><b>Características y condiciones de documentos: </b></h4>
