--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -345,53 +345,45 @@
                     
                     <h6><b>Constancia de estudios</b></h6>
 
-                      Documento que hace constar que el alumno se encuentra actualmente inscrito en la universidad.<br/><br/>
+                      Documento que hace constar que el alumno se encuentra actualmente inscrito en la universidad.<br/>
 
                       Para realizar el trámite de constancia se necesita:<br/>
-
-                      -Tener tu documentación digital<br/>
-
-                      -Tener tus pagos al corriente<br/>
-
+                      ● Tener tu documentación física o digital obligatoria completa (acta de nacimiento y certificado de bachillerato/certificado de licenciatura o maestría, según corresponda el grado)<br/>                      
+                      ● Tener tus pagos al corriente<br/>
+                      ● Estar matriculado, cursando materias.<br/>
                       <br/>
-
-                      El alumno tiene que realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500. Si realiza el pago por otro medio deberá solicitar el trámite a tutoría y enviar su comprobante de pago.<br/><br/>
-
-                      Nota: Si realiza su pago en línea la solicitud será creada en automático, el trámite tiene una duración de 4 a 10 días hábiles aproximadamente.<br/><br/>
-                      En ambos casos se recomienda dar aviso al área de tutoría para el seguimiento.<br/>
-
+                      El alumno tiene que realizar el pago en siu-utl.scalahed.com en la pestaña de trámites en línea por $500.00. Si realiza el pago por otro medio deberá volver a hacer el pago desde trámites en línea.<br/>
+                      <br/>
+                      Nota: Al realizar su pago en línea la solicitud será creada en automático, el trámite tiene una duración de 3 a 7 días hábiles aproximadamente. Si desea algún dato adicional en su documento, se recomienda dar aviso al área de tutoría para el seguimiento.
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="docrev">
                       
-                    <h6><b>Documentos para revalidación</b></h6>
+                  <h6><b>Documentos para revalidación</b></h6>
 
-                      Para alumnos con bachillerato en el extranjero es necesario realizar trámite de Revalidación sí es que aun no tiene Resolución de Revalidación de bachillerato.<br/><br/>
-
-                      Los documentos en físico que necesitamos para dar de alta en SEP al alumno son:<br/>
-
-                      Acta de nacimiento original si tu documento fue emitido en el extranjero debe tener apostilla o legalización.<br/>
-
-                      ● Resolución de Revalidación de bachillerato emitido por la Secretaría de Educación Pública. <br/>
-                      ● Copia de identificación (INE o Pasaporte)<br/>
-                      En caso de no tener *Resolución de Revalidación es necesario proporcionar para trámite.<br/>
-                      ● Certificado o diploma de bachillerato o equivalente legalizado o apostillado.<br/>
-                      ● Historia académica (tira de materias con calificaciones obtenidas)<br/>
-                      ● Plan de estudio de bachiller<br/>
-                      ● Carta poder llena con firma autógrafa.<br/>
-                      En caso de que los documentos sean en idioma diferente al español, traducción de Perito traductor.<br/>
-                      ● Realizar pago gestión de trámite $3,000.00<br/>
-                      ● Copia de identificación (INE o Pasaporte)<br/><br/>
-
-                      El pago lo realiza en la página de siu-utl.scalahed.com en la etiqueta de tramites en línea, si realiza el pago por otro medio el alumno solicita el trámite a tutoría enviando su comprobante de pago.
-
+                    Para alumnos con bachillerato en el extranjero es necesario realizar trámite de Revalidación sí es que aún no tiene Resolución de Revalidación de Bachillerato.<br/>
+                    <br/>
+                    Los documentos en físico que necesitamos para dar de alta en SEP al alumno son:<br/>
+                    ●   Acta o partida de nacimiento original, si viene en otro idioma deberás entregar junto con ella su traducción simple manteniendo el formato original.<br/>
+                    ● Resolución de Revalidación de bachillerato emitido por la Secretaría de Educación Pública.<br/>
+                    ● Copia de identificación oficial  (INE o Pasaporte)<br/>
+                    <br/>
+                    En caso de no tener Resolución de Revalidación es necesario proporcionar para trámite.<br/>
+                    ● Certificado y diploma o título de bachiller.<br/>
+                    ● Antecedente de secundaria (Boletas de calificaciones, certificado de notas, certificado de estudios de los tres años anteriores al bachillerato; si cuenta con diploma del nivel también debe ser entregado).<br/>
+                    <br/>
+                    En caso de que los documentos sean en idioma diferente al español, traducción simple manteniendo el formato original del documento.<br/>
+                    ● Realizar pago gestión de trámite $3,000.00<br/>
+                    ● Copia de identificación oficial (INE o Pasaporte)<br/>
+                    <br/>
+                    El pago lo realiza en la página de siu-utl.scalahed.com en la etiqueta de trámites en línea, si realiza el pago por otro medio el alumno solicita el trámite a tutoría enviando su comprobante de pago.
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="spaaucdtaralt">
                       
-                  <h6><b>¿Se puede agregar a una constancia de termino algo referente a la titulación?</b></h6>
+                  <h6><b>¿Se puede agregar a una constancia de término algo referente a la titulación?</b></h6>
 
-                  Se puede agregar una leyenda referente a que la titulación del alumno esta en curso, siempre y cuando el alumno cuente con los requisitos y cuente con el certificado total emitido (el primer documento de la titulación.
+                  Se puede agregar una leyenda referente a que la titulación del alumno esta en curso, siempre y cuando el alumno cuente con los requisitos y cuente con el certificado total emitido (el primer documento de la titulación).
                   <br/><br/>
                   Primero el alumno tiene que solicitar el documento y posterior el apoyo para agregarle la leyenda.
 
@@ -401,7 +393,7 @@
                       
                   <h6><b>Alumno no recibe documento solicitado</b></h6>
 
-                  Primero tenemos que verificar que en el apartado de documentos QR emitidos dentro de SIU, en caso de que el documento ya se encuentre elaborado, verificar si el correo del alumno en la plataforma es correcto.
+                  Primero tenemos que verificar que en el apartado de "Documentos QR emitidos" dentro de SIU se encuentre el documento emitido y listo para su descarga; en caso de que así sea, verificar si el correo del alumno en la plataforma es correcto.
                   <br/><br/>
                   En caso de que sea correcto verificar si no se encuentra en no deseados o spam dentro de su correo, si el alumno indica que no lo tiene, se deberá solicitar el reenvío del documento.
 
@@ -411,11 +403,7 @@
                       
                   <h6><b>Se puede solicitar un documento en físico</b></h6>
 
-                  Si, se puede solicitar la elaboración de la documentación que emite escolares en físico, siempre y cuando el documento que se solicitó no este incluido en algún paquete o promoción ya que estos documentos solo se entregan en digital.
-                  <br/><br/>
-                  En caso de que el alumno requiera el documento en físico tendrá que cubrir el monto en su plataforma.
-                 
-                </div>
+                  Si, se puede solicitar la elaboración de la documentación que emite escolares en físico, siempre y cuando el documento que se solicitó no este incluido en algún paquete o promoción ya que estos documentos solo se entregan en digital.                  
 
               </div>
 
