--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -877,7 +877,7 @@
             <br/><br/>
             <div>
               <h5>¿Que es el tipo de Ingreso?</h5>
-              <p>Se asigna según la situación escolar y antecedentes académicos de cada alumno, incluyen: regular, equivalencia de materias, revalidación de estudios o dictamen técnico.</p>
+              <p>Se asigna según la situación escolar y antecedentes académicos de cada alumno, incluyen: regular y revalidación de estudios.</p>
             
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
