--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -109,8 +109,8 @@
 
             <div class="row row-cols-1 row-cols-md-2 g-4">
               <div class="col">
-                <div class="card h-100">
-                  <div class="card-header">
+                <div class="card border-customrec h-100">
+                  <div class="card-header border-customrec">
                     Documentos Digitales para Licenciatura:
                   </div>
                   <div class="card-body">                   
@@ -123,8 +123,8 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card h-100">
-                  <div class="card-header">
+                <div class="card border-customrec h-100">
+                  <div class="card-header border-customrec">
                     Documentos Digitales para Maestría:
                   </div>
                   <div class="card-body">
@@ -140,8 +140,8 @@
               </div>
 
               <div class="col">
-                <div class="card h-100">
-                  <div class="card-header">
+                <div class="card border-customrec h-100">
+                  <div class="card-header border-customrec">
                     Documentos Digitales para Doctorado:
                   </div>
                   <div class="card-body">
@@ -157,8 +157,8 @@
               </div>
               <div class="col">
 
-                <div class="card h-100">
-                  <div class="card-header">
+                <div class="card border-customrec h-100">
+                  <div class="card-header border-customrec">
                     Para Utel LATAM:
                   </div>
                   <div class="card-body">
@@ -182,8 +182,8 @@
             
             <div class="row row-cols-1 row-cols-md-2 g-4">
               <div class="col">
-                <div class="card h-100">
-                  <div class="card-header">
+                <div class="card border-customrec h-100">
+                  <div class="card-header border-customrec">
                     Regular:
                   </div>
                   <div class="card-body">                   
@@ -194,8 +194,8 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card h-100">
-                  <div class="card-header">
+                <div class="card border-customrec h-100">
+                  <div class="card-header border-customrec">
                     Equivalencia de materias:
                   </div>
                   <div class="card-body">
@@ -207,8 +207,8 @@
               </div>
 
               <div class="col">
-                <div class="card h-100">
-                  <div class="card-header">
+                <div class="card border-customrec h-100">
+                  <div class="card-header border-customrec">
                     Revalidación de estudios:
                   </div>
                   <div class="card-body">
@@ -220,8 +220,8 @@
               </div>
               <div class="col">
 
-                <div class="card h-100">
-                  <div class="card-header">
+                <div class="card border-customrec h-100">
+                  <div class="card-header border-customrec">
                     Dictamen técnico:
                   </div>
                   <div class="card-body">
@@ -639,8 +639,6 @@
             <p style="text-align: justify;">
               Se encarga de recibir todos los documentos que los alumnos  envían a través de paquetería, dirigidos a la Dirección de servicios escolares y regulación. Principalmente para  la conformación de expediente escolar u otros fines. Una vez identificada el área de destino, se procede con la entrega al personal correspondiente.
             </P>
-            
-            <!--
               <h4><b>¿Qué es la dictaminación?</b></h4>
             
             <p style="text-align: justify;">
@@ -917,7 +915,7 @@
             <h5><b>Procesos de devolución</b></h5>
 
             <p>
-              PROCESO PARA DEVOLUCIÓN, CUANDO EL EXPEDIENTE ESTÁ EN UTEL PARA CUALQUIER ALIANZA (Este proceso solo lo puede hacer recolección)
+              <b>Proceso para devolución, cuando el expediente está en Utel para cualquier alianza (Este proceso solo lo puede hacer recolección)</b>
               <br/>
               1. El alumno deberá contratar una guía de recolección a domicilio y deberá enviarla al asesor.<br/>
               Datos que le pedirán al alumno al contratar la guia:
@@ -927,7 +925,7 @@
               3 El paquete se libera, el asesor solo notifica al alumno.<br/>
               
               <br/><br/>  
-              DEVOLUCIÓN CUANDO EL EXPEDIENTE ESTÁ EN UVE BACHILLERATO (Este proceso solo lo puede hacer recolección)
+              <b>Devolución cuando el expediente está en UVE bachillerato (Este proceso solo lo puede hacer recolección)</b>
               <br/>
               1. Primero se solicita la ficha de pago con UVE a Patricia y Monica<br/>
               2. Cuando ya se tiene la ficha de pago se debe de mandar al alumno<br/>
@@ -935,7 +933,7 @@
               4 La alianza se encarga de todos lo demás<br/>
 
               <br/><br/>
-              DEVOLUCIÓN CUANDO EL EXPEDIENTE ESTÁ EN UVE LICENCIATURA (Este proceso solo lo puede hacer recolección)
+              <b>Devolución cuando el expediente está en UVE licenciatura (Este proceso solo lo puede hacer recolección)</b>
               <br/>
               1.- Primero se solicita la ficha de pago con UVE a Alicia y Patricia<br/>
               2. Cuando ya se tiene la ficha de pago se debe de mandar al alumno<br/>
