--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -24,7 +24,7 @@
         <div class="border-3 card card-importante justify-content-center ">
           <div class="card-body">
             <p class="card-text">
-              Advertencia: Queda prohibido compartir los datos personal (teléfono, correo) de los colaboradores a los alumnos, esta información es de uso interno.
+              Favor de NO  compartir los datos personales (teléfono, correo) de los colaboradores a los alumnos, esta información es de uso interno. Al menos que se requiera seguimiento personalizado.
             </p>
           </div>
         </div>
