--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -1,3 +1,127 @@
+<div class="modal fade imagen-ampliada" id="imagenModalguia" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl"> 
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="container card border border-0">
+
+          <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
+
+            <div class="col">
+              <h5 class="offcanvas-title text-center" id="offcanvasBottomLabeltitint">Diploma intermedio auxiliar</h5>
+              <div id="carouseltitinter" class="carousel carousel-ejemplo slide">
+                <div class="carousel-inner carousel-inner-ejemplo">
+                  <div class="carousel-item active">
+                    <img src="img/escolares/Titulo_intermedio.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/escolares/Titulo_intermedio2.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/escolares/Titulo_intermedio3.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/escolares/Titulo_intermedio4.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/escolares/Titulo_intermedio5.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouseltitinter" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+              
+            </div>
+            
+            <div class="col card border border-0">
+
+              <strong class="py-3 px-3" style="text-align: center;"> Características del diploma intermedio</strong>
+              <a style="text-align: justify;">
+
+                Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
+                año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente digital. </br></br>
+                
+                *Estos diplomas son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
+
+                *Nota: La información que se encuentra actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
+              </a>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade imagen-ampliada" id="imagenModalguia2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl"> 
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="container card border border-0">
+          <div class="container card border border-0">
+
+            <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
+
+              <div class="col">
+                <h5 class="offcanvas-title text-center" id="offcanvasBottomLabeltitint" >Diploma intermedio analista</h5>
+
+                <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
+                  <div class="carousel-inner carousel-inner-ejemplo">
+                    <div class="carousel-item active">
+                      <img src="img/escolares/Titulo2_intermedio.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/escolares/Titulo2_intermedio2.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/escolares/Titulo2_intermedio3.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/escolares/Titulo2_intermedio4.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/escolares/Titulo2_intermedio6.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter2" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouseltitinter2" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+                
+              </div>
+              
+              <div class="col card border border-0">
+
+                <strong class="py-3 px-3" style="text-align: center;"> Características del Diploma intermedio</strong>
+                <a style="text-align: justify;">
+
+                  Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
+                  año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente digital. </br></br>
+                  
+                  *Estos diplomas son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
+
+                  *Nota: La información que se encuentra actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
+                </a>
+              </div>
+            </div>  
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="container rounded-3 py-3 bg-white"> 
 
     <h1 class="text-center" id="certificacion">Servicios escolares</h1>
@@ -476,131 +600,26 @@
                     
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 p-5">
                 <!--Ejemplo-->
-                <button class="col btn botonejemdoc btntit mx-auto d-block" type="button" data-bs-toggle="offcanvas" data-bs-target="#ejemplo-tit-int" aria-controls="offcanvasBottom"><img style=" max-height: 400px;"src="img/escolares/Titulo_intermedio.png"></button>
-
-                <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int" aria-labelledby="offcanvasBottomLabel">
-                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint"></h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <div class="col text-center p-6">
+                  <img style="cursor: zoom-in;" src="img/escolares/Titulo_intermedio.png" class="img-fluid botonejemdoc p-6" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia">
                 </div>
-                <div class="container card border border-0">
-  
-                  <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
-
-                    <div class="col">
-                      <h5 class="offcanvas-title text-center" id="offcanvasBottomLabeltitint">Diploma intermedio auxiliar</h5>
-                      <div id="carouseltitinter" class="carousel carousel-ejemplo slide">
-                        <div class="carousel-inner carousel-inner-ejemplo">
-                          <div class="carousel-item active">
-                            <img src="img/escolares/Titulo_intermedio.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/escolares/Titulo_intermedio2.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/escolares/Titulo_intermedio3.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/escolares/Titulo_intermedio4.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/escolares/Titulo_intermedio5.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouseltitinter" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                      </div>
-                      
-                    </div>
-                    
-                    <div class="col card border border-0">
-  
-                      <strong class="py-3 px-3" style="text-align: center;"> Características del diploma intermedio</strong>
-                      <a style="text-align: justify;">
-
-                        Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
-                        año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente digital. </br></br>
-                        
-                        *Estos diplomas son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
-
-                        *Nota: La información que se encuentra actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
-                      </a>
-                    </div>
-                  </div>  
-                </div>
-                </div> 
-
+                
               </div>
 
               <div class="col-md-6">
                 <!--Ejemplo-->
-                <button class="col btn botonejemdoc btntit mx-auto d-block" type="button" data-bs-toggle="offcanvas" data-bs-target="#ejemplo-tit-int2" aria-controls="offcanvasBottom"><img style=" max-height: 400px;"src="img/escolares/Titulo2_intermedio.PNG"></button>
+                <div class="col text-center p-5">
+                  <img style="cursor: zoom-in;" src="img/escolares/Titulo2_intermedio.png" class="img-fluid botonejemdoc p-6" alt="Imagen" data-bs-toggle="modal" data-bs-target="#imagenModalguia2">
+                </div>
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int2" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
                   <h5 class="offcanvas-title text-center" id="offcanvasBottomLabeltitint" ></h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
-                <div class="container card border border-0">
-  
-                  <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
-
-                    <div class="col">
-                      <h5 class="offcanvas-title text-center" id="offcanvasBottomLabeltitint" >Diploma intermedio analista</h5>
-  
-                      <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
-                        <div class="carousel-inner carousel-inner-ejemplo">
-                          <div class="carousel-item active">
-                            <img src="img/escolares/Titulo2_intermedio.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio2.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio3.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio4.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio6.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter2" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouseltitinter2" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                      </div>
-                      
-                    </div>
-                    
-                    <div class="col card border border-0">
-  
-                      <strong class="py-3 px-3" style="text-align: center;"> Características del Diploma intermedio</strong>
-                      <a style="text-align: justify;">
-
-                        Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
-                        año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente digital. </br></br>
-                        
-                        *Estos diplomas son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
-
-                        *Nota: La información que se encuentra actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
-                      </a>
-                    </div>
-                  </div>  
-                </div>
+                
                 </div> 
               </div>
               
